libguile-dbus/dbus-message-type.{c,h}: Add to the repository
* libguile-dbus/dbus-message-type.c, libguile-dbus/dbus-message-type.h: Add to
  the repository.
* libguile-dbus/Makefile.am: Update.

--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -24,10 +24,13 @@ libguile_dbus_la_SOURCES = \
 	common.c		\
 	dbus-connection-type.c	\
 	dbus-connection-type.h	\
-	dbus-connection-main.c
+	dbus-connection-main.c	\
+	dbus-message-type.h	\
+	dbus-message-type.c
 
 BUILT_SOURCES = \
-	dbus-connection-type.x
+	dbus-connection-type.x \
+	dbus-message-type.x
 
 libguile_dbus_la_CPPFLAGS = $(CFLAGS) $(GUILE_CFLAGS) $(DBUS_CFLAGS)
 
