dbus-message-type.c (gdbus_make_dbus_message): New procedure
* libguile-dbus/dbus-message-type.c (gdbus_make_dbus_message): New procedure.
* modules/dbus/message.scm: Add to the repository.
* modules/dbus/Makefile.am: Update.

--- a/modules/dbus/Makefile.am
+++ b/modules/dbus/Makefile.am
@@ -18,7 +18,8 @@
 include $(top_srcdir)/am/guilec
 
 SCM_SOURCES = \
-	connection.scm
+	connection.scm \
+	message.scm
 
 pkgguilesitedir = $(guilesitedir)/dbus
 
