message (make-dbus-message/method-call): New procedure
* modules/dbus/message.scm (make-dbus-message/method-call): New procedure.
* libguile-dbus/dbus-message-func.c: Add to the repository.
* libguile-dbus/Makefile.am: Update.

--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -26,7 +26,8 @@ libguile_dbus_la_SOURCES = \
 	dbus-connection-type.h	\
 	dbus-connection-main.c	\
 	dbus-message-type.h	\
-	dbus-message-type.c
+	dbus-message-type.c	\
+	dbus-message-func.c
 
 BUILT_SOURCES = \
 	dbus-connection-type.x \
