libguile-dbus/error.{h,c}: Add to the repository
* libguile-dbus/error.c, libguile-dbus/error.h: Add to the repository.
* libguile-dbus/Makefile.am: Update.

--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -22,6 +22,8 @@ lib_LTLIBRARIES = libguile-dbus.la
 libguile_dbus_la_SOURCES = \
 	common.h		\
 	common.c		\
+	error.h			\
+	error.c			\
 	dbus-connection-type.c	\
 	dbus-connection-type.h	\
 	dbus-connection-main.c	\
