dbus-message-main.c: Add to the repository
* libguile-dbus/dbus-message-main.c: Add to the repository.
* * libguile-dbus/Makefile.am: Update.

--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -29,7 +29,8 @@ libguile_dbus_la_SOURCES = \
 	dbus-connection-main.c	\
 	dbus-message-type.h	\
 	dbus-message-type.c	\
-	dbus-message-func.c
+	dbus-message-func.c	\
+	dbus-message-main.c
 
 BUILT_SOURCES = \
 	dbus-connection-type.x 	\
