dbus-message-main: Init Guile-DBus procedures
* libguile-dbus/dbus-message-main.c (init_dbus_message): Init Guile-DBus
  message procedures.
* libguile-dbus/dbus-message-func.h: Add to the repository.
* libguile-dbus/dbus-message-func.c (init_dbus_message_func): New procedure.
* libguile-dbus/Makefile.am: Update.

--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -29,6 +29,7 @@ libguile_dbus_la_SOURCES = \
 	dbus-connection-main.c	\
 	dbus-message-type.h	\
 	dbus-message-type.c	\
+	dbus-message-func.h	\
 	dbus-message-func.c	\
 	dbus-message-main.c
 
