libguile-dbus/dbus-type: Move all DBus type related procedures here
* libguile-dbus/dbus-message-func.c: Use procedures from 'dbus-type.h'.
* libguile-dbus/dbus-type.c: Move all DBus type related procedures here.
* libguile-dbus/dbus-type.h: Add to the repository.
* libguile-dbus/Makefile.am: Update.

--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -24,6 +24,8 @@ libguile_dbus_la_SOURCES = \
 	common.c		\
 	error.h			\
 	error.c			\
+	dbus-type.h		\
+	dbus-type.c		\
 	dbus-connection-type.c	\
 	dbus-connection-type.h	\
 	dbus-connection-main.c	\
