--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -24,8 +24,8 @@ libguile_dbus_la_SOURCES = \
 	common.c			\
 	error.h				\
 	error.c				\
-	dbus-type.h			\
-	dbus-type.c			\
+	symbols.h			\
+	symbols.c			\
 	dbus-connection-type.c		\
 	dbus-connection-type.h		\
 	dbus-connection-func.h		\
