dbus-pending-call-main.c: Add to the repository
* libguile-dbus/dbus-pending-call-main.c: Add to the repository.
* libguile-dbus/Makefile.am: Update.
* modules/dbus/connection.scm: Initialize pending call procedures.

--- a/libguile-dbus/Makefile.am
+++ b/libguile-dbus/Makefile.am
@@ -37,7 +37,8 @@ libguile_dbus_la_SOURCES = \
 	dbus-message-func.c		\
 	dbus-message-main.c		\
 	dbus-pending-call-type.h	\
-	dbus-pending-call-type.c
+	dbus-pending-call-type.c	\
+	dbus-pending-call-main.c
 
 BUILT_SOURCES = \
 	dbus-connection-type.x 		\
